# ACExternal

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
include/: entity.h  entitymanager.h  features.h  main.h  memoryhelper.h  offsets.h  programdata.h  types.h  ui.h  utils.h
src/: entity.cpp  entitymanager.cpp  features.cpp  main.cpp  memoryhelper.cpp  programdata.cpp  ui.cpp  uihandler.cpp  utils.cpp
